<resources>
    <string name="app_name">Egypt Tour Guide</string>
    <string name="rixos_hotel_detail">"Overlooking the Gulf of Aqaba, this high-end, all-inclusive beach resort is 4 km from the Straits of Tiran and 9 km from Sharm El Sheikh International Airport. Featuring scenic views, sitting areas and either balconies or terraces, the refined rooms and suites offer free Wi-Fi, flat-screens and minibars, as well as safes, and tea and coffeemakers. Upgraded suites add private pools. There are several elegant bars and restaurants, including Italian and Japanese eateries, and a bar overlooking a private beach. Other amenities include a posh spa, a gym and 7 pools, plus tennis courts, a water park and a kids' club."</string>
    <string name="hilton_luxor_hotel_detail">"When you stay at Hilton Luxor Resort &amp; Spa in Luxor, you'll be on the river walk, within a 15-minute drive of Karnak and Luxor Temple. This 5-star hotel is 23.6 mi (38 km) from Valley of the Kings and 2 mi (3.3 km) from Luxor Museum. Make yourself at home in one of the 236 air-conditioned rooms featuring minibars and Smart televisions. Complimentary wired and wireless Internet access keeps you connected, and digital programming provides entertainment. Private bathrooms with showers feature complimentary toiletries and hair dryers. Conveniences include laptop-compatible safes and desks, and housekeeping is provided on request. Pamper yourself with a visit to the spa, which offers massages, body treatments, and facials. You're sure to appreciate the recreational amenities, which include 2 outdoor swimming pools and a health club. Additional amenities at this hotel include complimentary wireless Internet access, concierge services, and babysitting/childcare (surcharge). Guests can catch a ride on the shuttle (surcharge), which operates within 8 kilometers. Enjoy Asian cuisine at Silk Road, one of the hotel's 3 restaurants, or stay in and take advantage of the 24-hour room service. Relax with a refreshing drink from the poolside bar or one of the 3 bars/lounges. Buffet breakfasts are available daily from 6:00 AM to 11:00 AM for a fee. Featured amenities include complimentary wired Internet access, a business center, and express check-in. Planning an event in Luxor? This hotel has facilities measuring 3959 square feet (368 square meters), including conference space. A roundtrip airport shuttle is provided for a surcharge (available 24 hours), and free self parking is available onsite."</string>
    <string name="baron_hotel_detail">"When you stay at Baron Resort Sharm El Sheikh in Sharm El Sheikh, you'll be on the beach, a 4-minute drive from Shark's Bay and 9 minutes from SOHO Square. This 5-star hotel is 5 mi (8 km) from Nabq Bay and 10.6 mi (17.1 km) from Naama Bay. Make yourself at home in one of the 356 air-conditioned guestrooms. Bathrooms have showers and hair dryers. Conveniences include phones and safes, and housekeeping is provided daily. Dip into one of the 3 outdoor swimming pools or enjoy other recreational amenities including a health club and a steam room. Additional amenities at this hotel include complimentary wireless Internet access, concierge services, and a ballroom. All-inclusive rates are available at this hotel. Meals and beverages at onsite dining establishments are included in all-inclusive rates. Charges may be applied for dining at some restaurants, special dinners and dishes, some beverages, and other amenities. Satisfy your appetite for lunch or dinner at Sinai World Class Cuisine, a restaurant which specializes in international cuisine, or stay in and take advantage of the 24-hour room service. Unwind at the end of the day with a drink at the bar/lounge or the beach bar."</string>
    <string name="aqua_hotel_detail">This modern 4-star all-inclusive Hurghada resort is just 700 metres from the Red Sea. It offers a lagoon-style outdoor pool and 3 buffet restaurants. All rooms have a balcony or terrace. Guests can enjoy free access to Albatros Aqua Park and children\'s aqua park at Aqua Blu Resort. Aqua Vista Resort - Families and couples only has 4 pools, separated for adults and children, including a Olympic pool. Guests have free use of the sun loungers which surround the pool and beach areas. Spa facilities include a sauna, Moroccan hamman, beauty salon and massage rooms. All of Aqua Vista Resort - Families and couples only’s rooms are air-conditioned and have satellite TV. 24-hour room service is available at a charge. 3 buffet restaurants are available and serve a variety of international cuisine including oriental Italian and Asian specialties, while a la carte restaurant features seafood with extra charge. Guests can choose from 5 bars, including a poolside bar. Hurghada International Airport is a 7-km drive from the Aqua Vista Resort-Families and couples only. Downtown Hurghada is 15 km away. Guests can also enjoy beach access at the nearby Beach Albatros Resort by shuttle bus ."</string>
    <string name="albatros_hotel_detail">"Featuring a gigantic outdoor pool and kids’ pool with water slides, this 5-star resort is a 15-minute drive from Hurghada Airport. Relaxing massages and a sauna are offered at the spa. The luxurious rooms at the Albatros Palace include a spacious terrace and a flat-screen TV. Each air-conditioned room has a seating area and a work desk.Guests can enjoy Chinese, Japanese, Thai and Indian specialties at L’Asiatique Restaurant. Mediterranean cuisine can be savoured at the Mediterranean Restaurant. German specialities are offered at Zum Kaiser. The Albatros offers body scrubs, body wraps and a range of animation activities. For recreation, there are tennis courts and a fitness centre. Albatros Palace Resort - Families and couples only is a 20-minute drive from the city center. It has 5 dining outlets, an outdoor pool, a spa and free parking."</string>
    <string name="movenpick_hotel_detail">"A stay at Movenpick Resort Aswan places you in the heart of Aswan, just a 3-minute walk from Kitchener's Island and within a 5-minute drive of Aswan Bazaar.This 5-star hotel is 1.3 mi (2.1 km) from Feryal Garden and 1.3 mi (2.1 km) from Nubian Museum. Make yourself at home in one of the 404 guestrooms featuring minibars and LED televisions. Complimentary wireless Internet access keeps you connected, and satellite programming is available for your entertainment. Private bathrooms with bathtubs or showers feature complimentary toiletries and hair dryers. Conveniences include phones, as well as safes and complimentary newspapers. Dip into one of the 2 outdoor swimming pools or enjoy other recreational amenities, which include a fitness center. Additional features at this Art Deco hotel include complimentary wireless Internet access, concierge services, and babysitting/childcare (surcharge). Enjoy international cuisine at Orangriee Restaurant, one of the hotel's 4 restaurants, or stay in and take advantage of the 24-hour room service. Snacks are also available at the 2 coffee shops/cafés. Wind down with a drink at one of the 3 bars/lounges or 2 poolside bars. A complimentary buffet breakfast is served daily from 6 AM to 10:30 AM. Featured amenities include a business center, express check-in, and express check-out."</string>
    <string name="sofitel_hotel_detail">"A stay at Sofitel Legend Old Cataract Aswan places you in the heart of Aswan, just a 5-minute walk from Nubian Museum and within a 5-minute drive of Elephantine Island. This 5-star hotel is 1.2 mi (1.9 km) from Aswan Bazaar and 1.3 mi (2.1 km) from Unfinished Obelisk. Make yourself at home in one of the 138 guestrooms featuring minibars and LCD televisions. Complimentary wireless Internet access keeps you connected, and satellite programming is available for your entertainment. Private bathrooms with shower/tub combinations feature complimentary toiletries and bidets. Conveniences include phones, as well as safes and desks. Relax at the full-service spa, where you can enjoy massages, body treatments, and facials. You're sure to appreciate the recreational amenities, including an outdoor pool, an indoor pool, and a spa tub. Additional features at this Victorian hotel include complimentary wireless Internet access, concierge services, and babysitting/childcare (surcharge). Enjoy French cuisine at 1902 RESTAURANT, one of the hotel's 4 restaurants, or stay in and take advantage of the 24-hour room service. Snacks are also available at the coffee shop/café. Relax with a refreshing drink from the poolside bar or one of the 4 bars/lounges. Featured amenities include a 24-hour business center, limo/town car service, and express check-in. Planning an event in Aswan? This hotel has facilities measuring 474 square feet (44 square meters), including conference space. A roundtrip airport shuttle is provided for a surcharge (available 24 hours)"</string>
    <string name="hilton_alex_hotel_detail">"Enjoy gorgeous views of the Mediterranean Sea and historic surroundings at Hilton Alexandria Corniche. Set in the heart of the city, our hotel is steps from the Corniche beachfront walkway and minutes to Alexandria National Museum, Souk El-Attarine and Montazah Palace Gardens. Indulge in our exclusive wellness center, rooftop pool, and 6 restaurants and bars. For the ultimate treat, take the free shuttle to our private beach. The hotel is steps from the Corniche, a seafront corridor of restaurants, markets and historical sites. Explore Egypt's rich history at the Royal Jewelry Museum or the Catacombs of Kom el Shoqafa. Just 15 minutes away is Bibliotheca Alexandrina, a must-see structure with museums, a planetarium and a re-creation of the Ancient Library of Alexandria."</string>
    <string name="seafood_factory_rest_detail">"Premium Quality Seafood &amp; More House of brands that's provides premium quality seafood products &amp; more delivered to your door step "</string>
    <string name="elkhal_rest_detail">"Throughout the centuries, Egyptian cuisine has been part of the country’s heritage, history and romantic past. At Al Khal, the finest authentic Egyptian dishes and delights are brought to you in a classic setting with a modern twist and traditionally perfect service. Enjoy the tastes and flavours of the ages created for you."</string>
    <string name="tegano_rest_detail">"At Tejano's Mexican Grill we serve the authentic taste of Tex-Mex food made with fresh ingredients. In our pleasant atmosphere you will experience the best of Texas and Mexico served on a plate."</string>
    <string name="aisha_rest_detail">"Brand new establishment, fully , experienced and professional staff, fresh ingredients daily.,. Aisha is Luxor's the most popular Egyptian and English restaurant and a favourite of guests from all around the world."</string>
    <string name="soils_rest_detail">"Indulge in a distinctive impeccable dining experience at Solis where we combine the signature atmosphere of the Nile view with the exquisite and authentic flavors of our Mediterranean cuisine dishes."</string>
    <string name="blue_rest_detail">"CUISINES Italian, Mediterranean, European SPECIAL DIETS Vegetarian Friendly, Vegan Options, Gluten Free Options"</string>
    <string name="alex_national_museum_detail">"More than 1800 archaeological pieces are exhibited chronologically from one floor to the next: the basement is devoted to Prehistoric and Pharonic times; first floor to the Graeco-Roman period; second floor to the Coptic and Islamic era that highlights artifacts raised during recent underwater excavations."</string>
    <string name="hotels">Hotels</string>
    <string name="resturants">Resturants</string>
    <string name="cafes">Cafes</string>
    <string name="museums">Museums</string>
    <string name="beachs">Beachs</string>
</resources>